# advent_of_code

./: amazon.py
2015/: 2  day1.py  day10.py  day11.py  day12.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day8.py
2015/inputs/: day11
2015/tests/: day12  day12.2
2017/: day_1.py  day_2.py  day_7.py
2018/: day1.py  day2.py  day3.py  day4.py
2019/: day1.py  day2.py
2020/: :  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  util.py
2020/inputs/: day8
2021/: Cargo.toml
2021/benches/: aoc.rs
2021/input/: day09.txt
2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  lib.rs  main.rs
2023/: Cargo.toml
2023/benches/: aoc.rs
2023/python/: day01.py  util.py
2023/src/: day01.rs  lib.rs
