[package]
name = "aoc2023"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
	"day01",
    # "day02", "day03", "day04", "day05",
	# "day06", "day07", "day08", "day09", "day10",
	# "day11", "day12", "day13", "day14", "day15",
	# "day16", "day17", "day18", "day19", "day20",
	# "day21", "day22", "day23", "day24", "day25",
]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = []
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []
day25 = []

[dependencies]
anyhow = "1.0.51"
criterion = "0.3.5"
itertools = "0.10.3"
lazy_static = "1.4.0"
num = "0.4.0"

[[bench]]
name = "aoc"
harness = false
